add security manager test